# Modern-languages-and-programming-platforms

./: README.md
RGBCube/: CMakeLists.txt  RGBCube  main.cpp  otchet.txt
RGBCube/freeglut/include/GL/: freeglut_ext.h
codogen/: CMakeLists.txt  codogen  main.cpp  otchet.txt  test.cpp  testlog.cpp
logger/: 14_9_21_sem.txt  CMakeLists.txt  log_1639830544.txt  logger  logger.cpp  logger.h  main.cpp  otchet.txt  test.cpp  testlog.cpp  timeinfo.h  timer.cpp  timer.h
