if(WIN32)
    cmake_minimum_required(VERSION 3.20)
    project(RGBCube)
    find_package(OpenGL REQUIRED)
    find_package(OpenCV REQUIRED)
    include_directories(freeglut)
    include_directories( ${OPENGL_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})

    set(FREEGLUT_LIBRARY "" CACHE FILEPATH  ${PROJECT_SOURCE_DIR}/freeglut/lib/x64/freeglut.lib)
    include_directories(${PROJECT_SOURCE_DIR}/freeglut/include/GL)
    set(CMAKE_CXX_STANDARD 20)

    add_executable(RGBCube main.cpp)

    target_link_libraries(RGBCube ${OPENGL_LIBRARIES} ${FREEGLUT_LIBRARY} ${OpenCV_LIBS})
    install(TARGETS RGBCube DESTINATION .)
    install(FILES  freeglut/bin/x64/freeglut.dll DESTINATION .)
endif()
if(UNIX)
    cmake_minimum_required(VERSION 3.16)
    project(RGBCube)
    find_package(OpenGL REQUIRED)
    find_package(GLUT REQUIRED)
    find_package(OpenCV REQUIRED)
    include_directories( ${OPENGL_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} ${GLUT_ROOT_PATH})
    set(CMAKE_CXX_STANDARD 20)

    add_executable(RGBCube main.cpp)

    target_link_libraries(RGBCube ${OPENGL_LIBRARIES} ${OpenCV_LIBS} ${GLUT_LIBRARY})
    install(TARGETS RGBCube DESTINATION .)
endif()